[package]
name = "sk-chain-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-embed={ version = "0.23.0" }
# ipfs-embed={ version = "0.23.0", path="../../codeProj/ipfs-embed" }
anyhow = "1.0.56"
futures = "0.3.21"
# libipld = { version = "0.12.0", default-features = false }
async-std = { version = "1.11.0", features = ["attributes"] }
libipld = { version = "0.12.0", default-features = false, features = ["dag-cbor", "dag-pb", "derive"] }
# rand = "0.8.5"
# trust-dns-resolver = "0.20"
# async-std-resolver = "0.20.4"
libp2p-dns = "0.32.0"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

[dev-dependencies]
# async-std = { version = "1.11.0", features = ["attributes"] }
# libipld = { version = "0.12.0", default-features = false, features = ["dag-cbor", "dag-pb", "derive"] }
# libp2p-bitswap = { version = "0.22.0", default-features = false, features = ["compat"] }
# multihash = { version = "0.14.0", default-features = false, features = ["blake3"] }
# rand = "0.8.5"
# regex = "1.5.5"
# tempdir = "0.3.7"
# tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
