[package]
name = "sk-chain-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-embed={ version = "0.23.0" }
# ipfs-embed={ version = "0.23.0", path="../../codeProj/ipfs-embed" }
anyhow = "1.0.56"
futures = "0.3.21"
async-std = { version = "1.11.0", features = ["attributes"] }
libipld = { version = "0.12.0", default-features = false, features = ["dag-cbor", "dag-pb", "derive"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

[dev-dependencies]
